# MathPilot

./: .gitignore  IMPLEMENTATION_PARSER_PLANNER.md  QUICKSTART.md  README.md  TEST_E2E_GUIDE.md  curl_stderr.txt  debug_groq_test.py  debug_help.txt  debug_import.py  e2e_log.txt  e2e_log_debug.txt  e2e_log_validation.txt  e2e_log_validation_2.txt  minimal_out.txt  minimal_out_2.txt  plan_help.txt  plan_multi-head_self-attention.json  pyproject.toml  search_results.txt  test_e2e.py
.github/: copilot-instructions.md
mathpilot/: __init__.py
mathpilot/cli/: __init__.py  main.py
mathpilot/executor/: __init__.py
mathpilot/generator/: __init__.py
mathpilot/parser/: __init__.py  core.py  models.py
mathpilot/planner/: __init__.py  core.py  models.py
mathpilot/search/: __init__.py  arxiv_client.py  models.py
mathpilot/utils/: __init__.py  config.py  file_browser.py  llm.py  logging.py  pdf.py
mathpilot/workspace/: __init__.py
tests/: __init__.py  test_generator.py  test_llm.py  test_parser.py  test_pdf.py  test_planner.py
